fix: element  'img' in block user

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <img 
               src="./image/user-avatar.jpg" 
               alt="Avatar: Nathan" 
-              class="user_avatar">
+              class="user__avatar">
               <span class="user__name">Nathan</span>
           </a>
           <!-- /.user -->
