correctied cod in prettier

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Best Tour Plan - Hotel Booking</title>
   </head>
   <body>
@@ -11,30 +11,31 @@
       <div class="container">
         <div class="header-top">
           <a href="#" class="logo">
-            <img 
-              src="image/horizontal-logo.svg" 
-              alt="Logo: Best Tour plan" 
-              class="logo__image">
+            <img
+              src="image/horizontal-logo.svg"
+              alt="Logo: Best Tour plan"
+              class="logo__image"
+            />
           </a>
 
           <form action="" class="search">
-            <input 
-              type="text" 
-              class="search__input" 
-              placeholder="Search Location">
+            <input
+              type="text"
+              class="search__input"
+              placeholder="Search Location"
+            />
             <button class="search__button">
-              <img 
-                src="./image/search.svg" 
-                alt="Icon: search">
+              <img src="./image/search.svg" alt="Icon: search" />
             </button>
           </form>
 
           <a href="#" class="user">
-            <img 
-              src="./image/user-avatar.jpg" 
-              alt="Avatar: Nathan" 
-              class="user__avatar">
-              <span class="user__name">Nathan</span>
+            <img
+              src="./image/user-avatar.jpg"
+              alt="Avatar: Nathan"
+              class="user__avatar"
+            />
+            <span class="user__name">Nathan</span>
           </a>
           <!-- /.user -->
         </div>
