create: mobile responsive for header

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </button>
           </form>
 
-          <a href="#" class="user">
+          <a href="#" class="user navbar__user">
             <img
               src="./image/user-avatar.jpg"
               alt="Avatar: Nathan"
@@ -43,6 +43,11 @@
             <span class="user__name">Nathan</span>
           </a>
           <!-- /.user -->
+          <button class="menu-button navbar-top__menu-button">
+            <span class="menu-button__line"></span>
+            <span class="menu-button__line"></span>
+            <span class="menu-button__line"></span>
+          </button>
         </div>
         <!-- /.navbar-top -->
       </div>
