--- a/index.html
+++ b/index.html
@@ -85,5 +85,54 @@
       </div>
       <!-- /.navbar-bottom -->
     </header>
+    <nav class="breadcrumb">
+      <div class="container">
+        <ul class="breadcrumb-list">
+          <li class="breadcrumb-list__item">
+            <a href="#" class="breadcrumb-list__link">Home</a>
+          </li>
+          <li class="breadcrumb-list__item">
+            <a href="#" class="breadcrumb-list__link">Flash Offers</a>
+          </li>
+          <li class="breadcrumb-list__item">Grand Hilton Hotel</li>
+        </ul>
+      </div>
+      <!-- /.container -->
+    </nav>
+    <!-- /.breadcrumb -->
+    <section class="hotel">
+      <div class="container">
+        <div class="hotel-info">
+          <div class="hotel-info__text">
+            <div class="hotel-wrapper">
+              <div class="stars">
+                <img class="stars__icon" src="image/star.svg" alt="star" />
+                <img class="stars__icon" src="image/star.svg" alt="star" />
+                <img class="stars__icon" src="image/star.svg" alt="star" />
+                <img class="stars__icon" src="image/star.svg" alt="star" />
+                <img class="stars__icon" src="image/star.svg" alt="star" />
+                <img class="stars__icon" src="image/star.svg" alt="star" />
+              </div>
+              <h1 class="hotel-wrapper__name">Grand Hilton Hotel</h1>
+              <span class="hotel-wrapper__offer">Flash Offer</span>
+            </div>
+            <!-- /.hotel-wrapper -->
+            <p class="hotel-description">
+              Half-Board/ All Inclusive + Complimentary Activities + Child Stays
+              Free
+            </p>
+          </div>
+          <!-- /.hotel-info__text -->
+          <div class="rating hotel-info__rating">
+            <span class="rating__text">User Rattings</span>
+            <span class="rating__counter">4.5/5</span>
+          </div>
+          <!-- /.hotel-info__rating -->
+        </div>
+        <!-- /.hotel-info -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.hotel -->
   </body>
 </html>
