--- a/index.html
+++ b/index.html
@@ -153,13 +153,70 @@
                 <div class="swiper-slide">
                   <img src="image/slide-5.jpg" alt="slide" />
                 </div>
-            </div>
-            <!-- If we need navigation buttons -->
+              </div>
+              <!-- /.swiper -->
+              <!-- If we need navigation buttons -->
               <button class="slider-button slider-button--prev"></button>
               <button class="slider-button slider-button--next"></button>
-            <!-- /.swiper -->
+            </div>
           </div>
           <!-- /.slider -->
+          <div class="hotel-right">
+            <div class="booking">
+              <div class="booking__info">
+                <div class="booking__price">
+                  <span class="booking__start">price starts as</span>
+                  <strong class="booking__pricetag">$ 8,500</strong>
+                  <span class="booking__per-room">per room / night</span>
+                </div>
+                <!-- /.booking__price -->
+                <div class="booking__room">
+                  <div class="booking__text">
+                    <img
+                      src="image/user.svg"
+                      alt="Icon: user"
+                      class="booking__icon"
+                    />
+                    <span class="booking__description">2 x Guests</span>
+                  </div>
+                  <!-- /.booking__text -->
+                  <div class="booking__text">
+                    <img
+                      src="image/home.svg"
+                      alt="Icon: home"
+                      class="booking__icon"
+                    />
+                    <span class="booking__description">1 x Room</span>
+                  </div>
+                  <!-- /.booking__text -->
+                </div>
+                <!-- /.booking__room -->
+              </div>
+              <!-- /.booking__info -->
+              <div class="booking__call-center">
+                <span class="booking__heading">Quick Booking</span>
+                <a href="tel:12100" class="booking__link">
+                  <img src="image/phone-call.svg" alt="Icon: phone" />
+                  <span class="booking__number">12100</span>
+                </a>
+              </div>
+              <!-- /.booking__call-center -->
+              <button class="button booking__button">View Other Options</button>
+            </div>
+            <!-- /.booking -->
+            <div class="map">
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2794.9626957561404!2d9.215080215751273!3d45.53095623700721!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4786b8a7d805cc5f%3A0xa9cdf4c4c442c36!2sGrand%20Hotel%20Villa%20Torretta%20Milan%20Sesto%2C%20Curio%20Collection%20by%20Hilton!5e0!3m2!1sru!2sru!4v1643815726588!5m2!1sru!2sru"
+                width="347"
+                height="213"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+              ></iframe>
+            </div>
+            <!-- /.map -->
+          </div>
+          <!-- /.hotel-right -->
         </div>
         <!-- /.hotel-grid -->
       </div>
