--- a/index.html
+++ b/index.html
@@ -132,20 +132,32 @@
         </div>
         <!-- /.hotel-info -->
         <div class="hotel-grid">
-          <div class="slider">
+          <div class="slider hotel__slider">
             <!-- Slider main container -->
             <div class="swiper">
               <!-- Additional required wrapper -->
               <div class="swiper-wrapper">
                 <!-- Slides -->
                 <div class="swiper-slide">
-                  <img src="image/slide-1.jpg" alt="slide" />
+                  <img
+                    class="swiper-slide__image"
+                    src="image/slide-1.jpg"
+                    alt="slide"
+                  />
                 </div>
                 <div class="swiper-slide">
-                  <img src="image/slide-2.jpg" alt="slide" />
+                  <img
+                    class="swiper-slide__image"
+                    src="image/slide-2.jpg"
+                    alt="slide"
+                  />
                 </div>
                 <div class="swiper-slide">
-                  <img src="image/slide-3.jpg" alt="slide" />
+                  <img
+                    class="swiper-slide__image"
+                    src="image/slide-3.jpg"
+                    alt="slide"
+                  />
                 </div>
                 <div class="swiper-slide">
                   <img src="image/slide-4.jpg" alt="slide" />
@@ -207,7 +219,7 @@
             <div class="map">
               <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2794.9626957561404!2d9.215080215751273!3d45.53095623700721!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4786b8a7d805cc5f%3A0xa9cdf4c4c442c36!2sGrand%20Hotel%20Villa%20Torretta%20Milan%20Sesto%2C%20Curio%20Collection%20by%20Hilton!5e0!3m2!1sru!2sru!4v1643815726588!5m2!1sru!2sru"
-                width="347"
+                width="100%"
                 height="213"
                 style="border: 0"
                 allowfullscreen=""
