--- a/index.html
+++ b/index.html
@@ -218,16 +218,7 @@
               <button class="button booking__button">View Other Options</button>
             </div>
             <!-- /.booking -->
-            <div class="map">
-              <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2794.9626957561404!2d9.215080215751273!3d45.53095623700721!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4786b8a7d805cc5f%3A0xa9cdf4c4c442c36!2sGrand%20Hotel%20Villa%20Torretta%20Milan%20Sesto%2C%20Curio%20Collection%20by%20Hilton!5e0!3m2!1sru!2sru!4v1643815726588!5m2!1sru!2sru"
-                width="100%"
-                height="213"
-                style="border: 0"
-                allowfullscreen=""
-                loading="lazy"
-              ></iframe>
-            </div>
+            <div id="map" class="map"></div>
             <!-- /.map -->
           </div>
           <!-- /.hotel-right -->
@@ -237,6 +228,10 @@
       <!-- /.container -->
     </section>
     <!-- /.hotel -->
+    <script
+      src="https://api-maps.yandex.ru/2.1/?apikey=ваш API-ключ&lang=ru_RU"
+      type="text/javascript"
+    ></script>
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
   </body>
