create: add reviews section and fix hotel-slider

--- a/index.html
+++ b/index.html
@@ -113,7 +113,6 @@
                 <img class="stars__icon" src="image/star.svg" alt="star" />
                 <img class="stars__icon" src="image/star.svg" alt="star" />
                 <img class="stars__icon" src="image/star.svg" alt="star" />
-                <img class="stars__icon" src="image/star.svg" alt="star" />
               </div>
               <h1 class="hotel-wrapper__name">Grand Hilton Hotel</h1>
               <span class="hotel-wrapper__offer">Flash Offer</span>
@@ -261,25 +260,108 @@
                   />
                   <h3 class="reviews-slider__username">Megan Fox</h3>
                   <span class="reviews-slider__date">Stayed 18 Nov, 2019</span>
-                  <div class="rating">
-                    <img class="rating__icon" src="image/star.svg" alt="star" />
+                  <div class="reviews-slider__rating">
                     <img class="rating__icon" src="image/star.svg" alt="star" />
                     <img class="rating__icon" src="image/star.svg" alt="star" />
                     <img class="rating__icon" src="image/star.svg" alt="star" />
                     <img class="rating__icon" src="image/star.svg" alt="star" />
                     <img class="rating__icon" src="image/star.svg" alt="star" />
                   </div>
-                  <!-- /.rating -->
+                  <!-- /.reviews-slider__rating -->
                 </div>
                 <!-- /.reviews-slider__profile -->
+                <p class="reviews-slider__text">
+                  It was very nice hotel with cleanliness. Staff behavior was
+                  good and polite. They welcome us very well. Issue was only
+                  that Lift was not in working and we were allotted to 3rd floor
+                  and amenities articles were in corner of gallery which were
+                  giving bad feeling. Breakfast was good and support of the
+                  staff was also very nice. Location is not good as per
+                  atmosphere, it is very nearby most of the popular places but
+                  self location in a narrow street is not good. Overall it was a
+                  good experience and could recommend.
+                </p>
+              </div>
+              <!-- /.reviews-slider__item -->
+            </div>
+            <!-- /.swiper-slide -->
+
+            <div class="swiper-slide">
+              <div class="reviews-slider__item">
+                <div class="reviews-slider__profile">
+                  <img
+                    src="image/reviews-avatar-2.jpg"
+                    alt="Photo: Brad Pitt"
+                    class="reviews-slider__avatar"
+                  />
+                  <h3 class="reviews-slider__username">Brad Pitt</h3>
+                  <span class="reviews-slider__date">Stayed 23 Mar, 2020</span>
+                  <div class="reviews-slider__rating">
+                    <img class="rating__icon" src="image/star.svg" alt="star" />
+                    <img class="rating__icon" src="image/star.svg" alt="star" />
+                    <img class="rating__icon" src="image/star.svg" alt="star" />
+                    <img class="rating__icon" src="image/star.svg" alt="star" />
+                    <img class="rating__icon" src="image/star.svg" alt="star" />
+                  </div>
+                  <!-- /.reviews-slider__rating -->
+                </div>
+                <!-- /.reviews-slider__profile -->
+                <p class="reviews-slider__text">
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Molestiae soluta quam maxime sunt tempore doloremque
+                  accusantium beatae aliquam aspernatur quasi. Nostrum eligendi
+                  illum dolore molestias cupiditate, officiis voluptatum.
+                  Nostrum hic magnam nam voluptate qui cupiditate nobis aut
+                  similique dolor reprehenderit. Hic vero asperiores ea enim
+                  nemo ratione quidem, dolores velit.
+                </p>
+              </div>
+              <!-- /.reviews-slider__item -->
+            </div>
+            <!-- /.swiper-slide -->
+
+            <div class="swiper-slide">
+              <div class="reviews-slider__item">
+                <div class="reviews-slider__profile">
+                  <img
+                    src="image/reviews-avatar-3.jpg"
+                    alt="Photo: Alexey Dolmatov"
+                    class="reviews-slider__avatar"
+                  />
+                  <h3 class="reviews-slider__username">Alexey Dolmatov</h3>
+                  <span class="reviews-slider__date">Stayed 17 Oct, 2021</span>
+                  <div class="reviews-slider__rating">
+                    <img class="rating__icon" src="image/star.svg" alt="star" />
+                    <img class="rating__icon" src="image/star.svg" alt="star" />
+                    <img class="rating__icon" src="image/star.svg" alt="star" />
+                    <img class="rating__icon" src="image/star.svg" alt="star" />
+                    <img class="rating__icon" src="image/star.svg" alt="star" />
+                  </div>
+                  <!-- /.reviews-slider__rating -->
+                </div>
+                <!-- /.reviews-slider__profile -->
+                <p class="reviews-slider__text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut,
+                  eum quisquam quaerat, et modi voluptatem inventore quam
+                  molestias officiis tenetur obcaecati fugiat alias magnam!
+                  Voluptates labore quis cum saepe quibusdam perspiciatis,
+                  excepturi ipsam. Culpa nesciunt quisquam quia, corrupti
+                  suscipit consequatur molestiae maiores alias velit architecto
+                  perspiciatis facilis, neque ad placeat id debitis voluptates
+                  quidem eos inventore ratione ab quis rerum.
+                </p>
               </div>
               <!-- /.reviews-slider__item -->
             </div>
             <!-- /.swiper-slide -->
           </div>
           <!-- /.swiper-wrapper -->
-          <button class="slider-button slider-button--prev"></button>
-          <button class="slider-button slider-button--next"></button>
+          <button
+            class="reviews-slider__button reviews-slider__button--next"
+          ></button>
+          <button
+            class="reviews-slider__button reviews-slider__button--prev"
+          ></button>
         </div>
         <!-- /.swiper -->
       </div>
