--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
     <!-- /.newsletter -->
     <section class="reviews">
       <div class="container">
-        <h2 class="reviews__title">What people think about us</h2>
+        <h2 class="reviews__title">What people think about&nbsp;us</h2>
         <div class="swiper reviews-slider">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
