--- a/index.html
+++ b/index.html
@@ -139,30 +139,38 @@
               <!-- Slides -->
               <div class="swiper-slide hotel-slider__item">
                 <img
-                  class="swiper-slide__image"
+                  class="hotel-slider__image"
                   src="image/slide-1.jpg"
                   alt="slide"
                 />
               </div>
               <div class="swiper-slide hotel-slider__item">
                 <img
-                  class="swiper-slide__image"
+                  class="hotel-slide__image"
                   src="image/slide-2.jpg"
                   alt="slide"
                 />
               </div>
               <div class="swiper-slide hotel-slider__item">
                 <img
-                  class="swiper-slide__image"
+                  class="hotel-slide__image"
                   src="image/slide-3.jpg"
                   alt="slide"
                 />
               </div>
               <div class="swiper-slide hotel-slider__item">
-                <img src="image/slide-4.jpg" alt="slide" />
+                <img
+                  class="hotel-slider__image"
+                  src="image/slide-4.jpg"
+                  alt="slide"
+                />
               </div>
               <div class="swiper-slide hotel-slider__item">
-                <img src="image/slide-5.jpg" alt="slide" />
+                <img
+                  class="hotel-slider__image"
+                  src="image/slide-5.jpg"
+                  alt="slide"
+                />
               </div>
             </div>
             <!-- /.swiper -->
