create: aded parallax in newsleter

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Best Tour Plan - Hotel Booking</title>
     <link
-      link
       href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&family=Nunito:wght@400;600;800&display=swap"
       rel="stylesheet"
     />
@@ -235,7 +234,10 @@
       <!-- /.container -->
     </section>
     <!-- /.hotel -->
-    <section class="newsletter">
+    <section
+      class="newsletter parallax"
+      data-image-src="image/newsletter-bg.jpg"
+    >
       <div class="newsletter-wrapper newsletter__container">
         <h2 class="newsletter-title">
           subscribe to our
@@ -376,6 +378,7 @@
       <!-- /.container -->
     </section>
     <!-- /.reviews -->
+    <script src="js/jquery-3.6.0.min.js"></script>
     <script
       src="https://api-maps.yandex.ru/2.1/?apikey=ваш API-ключ&lang=ru_RU"
       type="text/javascript"
