create: add reviews

--- a/index.html
+++ b/index.html
@@ -378,6 +378,74 @@
       <!-- /.container -->
     </section>
     <!-- /.reviews -->
+    <section class="activities">
+      <div class="container">
+        <div class="activities-wrapper">
+          <div class="activities-header">
+            <h2 class="activities-header__title">Other Activities</h2>
+          </div>
+          <!-- /.activities-header -->
+          <div class="activities-info">
+            <div class="activities-variant">
+              <img
+                src="image/activities-variant-1.jpg"
+                alt=""
+                class="activities-variant__img"
+              />
+              <span class="activities-variant__text"
+                >The curious corner <br />
+                of chamarel</span
+              >
+              <button class="activities-variant__button">Book Now</button>
+            </div>
+            <!-- /.activities-variant -->
+            <div class="activities-variant">
+              <img
+                src="image/activities-variant-2.jpg"
+                alt=""
+                class="activities-variant__img"
+              />
+              <span class="activities-variant__text"
+                >Gymkhana club golf <br />
+                course</span
+              >
+              <button class="activities-variant__button">Book Now</button>
+            </div>
+            <!-- /.activities-variant -->
+            <div class="activities-variant">
+              <img
+                src="image/activities-variant-3.jpg"
+                alt=""
+                class="activities-variant__img"
+              />
+              <span class="activities-variant__text"
+                >Tamarind falls hiking <br />
+                trip - full day
+              </span>
+              <button class="activities-variant__button">Book Now</button>
+            </div>
+            <!-- /.activities-variant -->
+            <div class="activities-variant">
+              <img
+                src="image/activities-variant-4.jpg"
+                alt=""
+                class="activities-variant__img"
+              />
+              <span class="activities-variant__text"
+                >The blue marine discovery <br />
+                quest</span
+              >
+              <button class="activities-variant__button">Book Now</button>
+            </div>
+            <!-- /.activities-variant -->
+          </div>
+          <!-- /.activities-info -->
+        </div>
+        <!-- /.activities-wrapper -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.activities -->
     <script src="js/jquery-3.6.0.min.js"></script>
     <script
       src="https://api-maps.yandex.ru/2.1/?apikey=ваш API-ключ&lang=ru_RU"
