create: add section packages

--- a/index.html
+++ b/index.html
@@ -145,14 +145,14 @@
               </div>
               <div class="swiper-slide hotel-slider__item">
                 <img
-                  class="hotel-slide__image"
+                  class="hotel-slider__image"
                   src="image/slide-2.jpg"
                   alt="slide"
                 />
               </div>
               <div class="swiper-slide hotel-slider__item">
                 <img
-                  class="hotel-slide__image"
+                  class="hotel-slider__image"
                   src="image/slide-3.jpg"
                   alt="slide"
                 />
@@ -234,6 +234,309 @@
       <!-- /.container -->
     </section>
     <!-- /.hotel -->
+    <section class="packages">
+      <div class="container">
+        <div class="packages-wrapper">
+          <h1 class="packages__title">Other Packages</h1>
+          <div class="packages-grid">
+            <div class="packages-variant-1">
+              <div class="packages-subvariant-1">
+                <img
+                  class="packages__image"
+                  src="image/hotel-blue-haven.jpg"
+                  alt="Hotel: Blue Haven"
+                />
+                <span class="packages__lable">Flash Offer</span>
+              </div>
+              <div class="packages-subvariant-2">
+                <div class="packages-stars">
+                  <img
+                    class="packages-stars__icon"
+                    src="image/star.svg"
+                    alt="star"
+                  />
+                  <img
+                    class="packages-stars__icon"
+                    src="image/star.svg"
+                    alt="star"
+                  />
+                  <img
+                    class="packages-stars__icon"
+                    src="image/star.svg"
+                    alt="star"
+                  />
+                  <img
+                    class="packages-stars__icon"
+                    src="image/star.svg"
+                    alt="star"
+                  />
+                  <img
+                    class="packages-stars__icon"
+                    src="image/star.svg"
+                    alt="star"
+                  />
+                </div>
+                <h2 class="packages__hotel-name">Hotel Blue Haven</h2>
+                <p class="packages__info">
+                  Aute quis duis excepteur excepteur ipsum cat eiusmod
+                  consectetur enim laborum magna llit. Ipsum est fugiat velit ea
+                  llamco do esse ut in veniam sun in onsequat. Aute quis duis
+                  epteur excepteur ipsum occaecat eiusmod nsectetur enim laborum
+                  magna mollit. Ipsum est fugiat velit ea ullamco do
+                </p>
+                <div class="packages__room">
+                  <div class="packages__geolocation">
+                    <img
+                      src="image/geolocation.svg"
+                      alt="Icon: geolocation"
+                      class="packages__icon"
+                    />
+                    <span class="packages__description"
+                      >1749 Wheeler Ridge Delaware</span
+                    >
+                  </div>
+                  <div class="packages__text">
+                    <img
+                      src="image/user.svg"
+                      alt="Icon: user"
+                      class="packages__icon"
+                    />
+                    <span class="packages__description">2 x Guests</span>
+                  </div>
+                  <!-- /.packages__text -->
+                  <div class="packages__text">
+                    <img
+                      src="image/home.svg"
+                      alt="Icon: home"
+                      class="packages__icon"
+                    />
+                    <span class="packages__description">1 x Room</span>
+                  </div>
+                  <!-- /.packages__text -->
+                </div>
+                <div class="packages-futer">
+                  <div class="packages__price">
+                    <strong class="packages__pricetag--through"
+                      >$ 10,500</strong
+                    >
+                    <strong class="packages__pricetag">$ 8,500</strong>
+                  </div>
+                  <button class="packages__button">Book Now</button>
+                </div>
+              </div>
+            </div>
+            <div class="packages-variant-2">
+              <div class="packages-subvariant-3">
+                <img
+                  class="packages__image--small"
+                  src="image/belle-mare.jpg"
+                  alt="Hotel: LUX* Belle Mare"
+                />
+                <span class="packages__lable--small">Flash Offer</span>
+              </div>
+              <div class="packages-subvariant-4">
+                <h2 class="packages__hotel-name--small">LUX* Belle Mare</h2>
+                <div class="packages__room--small">
+                  <div class="packages__geolocation">
+                    <img
+                      src="image/geolocation.svg"
+                      alt="Icon: geolocation"
+                      class="packages__icon"
+                    />
+                    <span class="packages__description"
+                      >1749 Wheeler Ridge Delaware</span
+                    >
+                  </div>
+                  <div class="packages__text">
+                    <img
+                      src="image/user.svg"
+                      alt="Icon: user"
+                      class="packages__icon"
+                    />
+                    <span class="packages__description">2 x Guests</span>
+                  </div>
+                  <!-- /.packages__text -->
+                  <div class="packages__text">
+                    <img
+                      src="image/home.svg"
+                      alt="Icon: home"
+                      class="packages__icon"
+                    />
+                    <span class="packages__description">1 x Room</span>
+                  </div>
+                  <!-- /.packages__text -->
+                </div>
+                <div class="packages-futer">
+                  <div class="packages__price">
+                    <strong class="packages__pricetag--through"
+                      >$ 10,500</strong
+                    >
+                    <strong class="packages__pricetag">$ 8,500</strong>
+                  </div>
+                  <button class="packages__button">Book Now</button>
+                </div>
+              </div>
+            </div>
+            <div class="packages-variant-2">
+              <div class="packages-subvariant-3">
+                <img
+                  class="packages__image--small"
+                  src="image/White-Palace.jpg"
+                  alt="Hotel: White Palace"
+                />
+                <span class="packages__lable--small">Flash Offer</span>
+              </div>
+              <div class="packages-subvariant-4">
+                <h2 class="packages__hotel-name--small">LUX* Belle Mare</h2>
+                <div class="packages__room--small">
+                  <div class="packages__geolocation">
+                    <img
+                      src="image/geolocation.svg"
+                      alt="Icon: geolocation"
+                      class="packages__icon"
+                    />
+                    <span class="packages__description"
+                      >1749 Wheeler Ridge Delaware</span
+                    >
+                  </div>
+                  <div class="packages__text">
+                    <img
+                      src="image/user.svg"
+                      alt="Icon: user"
+                      class="packages__icon"
+                    />
+                    <span class="packages__description">2 x Guests</span>
+                  </div>
+                  <!-- /.packages__text -->
+                  <div class="packages__text">
+                    <img
+                      src="image/home.svg"
+                      alt="Icon: home"
+                      class="packages__icon"
+                    />
+                    <span class="packages__description">1 x Room</span>
+                  </div>
+                  <!-- /.packages__text -->
+                </div>
+                <div class="packages-futer">
+                  <div class="packages__price">
+                    <strong class="packages__pricetag--through"
+                      >$ 10,500</strong
+                    >
+                    <strong class="packages__pricetag">$ 9,500</strong>
+                  </div>
+                  <button class="packages__button">Book Now</button>
+                </div>
+              </div>
+            </div>
+            <div class="packages-variant-2">
+              <div class="packages-subvariant-3">
+                <img
+                  class="packages__image--small"
+                  src="image/Luxury-Place.jpg"
+                  alt="Hotel: Luxury Place"
+                />
+                <span class="packages__lable--small">Flash Offer</span>
+              </div>
+              <div class="packages-subvariant-4">
+                <h2 class="packages__hotel-name--small">LUX* Belle Mare</h2>
+                <div class="packages__room--small">
+                  <div class="packages__geolocation">
+                    <img
+                      src="image/geolocation.svg"
+                      alt="Icon: geolocation"
+                      class="packages__icon"
+                    />
+                    <span class="packages__description"
+                      >1749 Wheeler Ridge Delaware</span
+                    >
+                  </div>
+                  <div class="packages__text">
+                    <img
+                      src="image/user.svg"
+                      alt="Icon: user"
+                      class="packages__icon"
+                    />
+                    <span class="packages__description">2 x Guests</span>
+                  </div>
+                  <!-- /.packages__text -->
+                  <div class="packages__text">
+                    <img
+                      src="image/home.svg"
+                      alt="Icon: home"
+                      class="packages__icon"
+                    />
+                    <span class="packages__description">1 x Room</span>
+                  </div>
+                  <!-- /.packages__text -->
+                </div>
+                <div class="packages-futer">
+                  <div class="packages__price">
+                    <strong class="packages__pricetag--through">$ 4,500</strong>
+                    <strong class="packages__pricetag">$ 2,500</strong>
+                  </div>
+                  <button class="packages__button">Book Now</button>
+                </div>
+              </div>
+            </div>
+            <div class="packages-variant-2">
+              <div class="packages-subvariant-3">
+                <img
+                  class="packages__image--small"
+                  src="image/Hotel-Five-Star.jpg"
+                  alt="Hotel: Five Star"
+                />
+                <span class="packages__lable--small">Flash Offer</span>
+              </div>
+              <div class="packages-subvariant-4">
+                <h2 class="packages__hotel-name--small">LUX* Belle Mare</h2>
+                <div class="packages__room--small">
+                  <div class="packages__geolocation">
+                    <img
+                      src="image/geolocation.svg"
+                      alt="Icon: geolocation"
+                      class="packages__icon"
+                    />
+                    <span class="packages__description"
+                      >1749 Wheeler Ridge Delaware</span
+                    >
+                  </div>
+                  <div class="packages__text">
+                    <img
+                      src="image/user.svg"
+                      alt="Icon: user"
+                      class="packages__icon"
+                    />
+                    <span class="packages__description">2 x Guests</span>
+                  </div>
+                  <!-- /.packages__text -->
+                  <div class="packages__text">
+                    <img
+                      src="image/home.svg"
+                      alt="Icon: home"
+                      class="packages__icon"
+                    />
+                    <span class="packages__description">1 x Room</span>
+                  </div>
+                  <!-- /.packages__text -->
+                </div>
+                <div class="packages-futer">
+                  <div class="packages__price">
+                    <strong class="packages__pricetag--through">$ 6,500</strong>
+                    <strong class="packages__pricetag">$ 3,500</strong>
+                  </div>
+                  <button class="packages__button">Book Now</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- /.packages-grid -->
+        </div>
+        <!-- /.packages-wrapper -->
+      </div>
+      <!-- /.conainer -->
+    </section>
+    <!-- /.packages -->
     <section
       class="newsletter parallax"
       data-image-src="image/newsletter-bg.jpg"
@@ -271,11 +574,31 @@
                   <h3 class="reviews-slider__username">Megan Fox</h3>
                   <span class="reviews-slider__date">Stayed 18 Nov, 2019</span>
                   <div class="reviews-slider__rating">
-                    <img class="rating__icon" src="image/star.svg" alt="star" />
-                    <img class="rating__icon" src="image/star.svg" alt="star" />
-                    <img class="rating__icon" src="image/star.svg" alt="star" />
-                    <img class="rating__icon" src="image/star.svg" alt="star" />
-                    <img class="rating__icon" src="image/star.svg" alt="star" />
+                    <img
+                      class="reviews__icon"
+                      src="image/star.svg"
+                      alt="star"
+                    />
+                    <img
+                      class="reviews__icon"
+                      src="image/star.svg"
+                      alt="star"
+                    />
+                    <img
+                      class="reviews__icon"
+                      src="image/star.svg"
+                      alt="star"
+                    />
+                    <img
+                      class="reviews__icon"
+                      src="image/star.svg"
+                      alt="star"
+                    />
+                    <img
+                      class="reviews__icon"
+                      src="image/star.svg"
+                      alt="star"
+                    />
                   </div>
                   <!-- /.reviews-slider__rating -->
                 </div>
@@ -307,11 +630,31 @@
                   <h3 class="reviews-slider__username">Brad Pitt</h3>
                   <span class="reviews-slider__date">Stayed 23 Mar, 2020</span>
                   <div class="reviews-slider__rating">
-                    <img class="rating__icon" src="image/star.svg" alt="star" />
-                    <img class="rating__icon" src="image/star.svg" alt="star" />
-                    <img class="rating__icon" src="image/star.svg" alt="star" />
-                    <img class="rating__icon" src="image/star.svg" alt="star" />
-                    <img class="rating__icon" src="image/star.svg" alt="star" />
+                    <img
+                      class="reviews__icon"
+                      src="image/star.svg"
+                      alt="star"
+                    />
+                    <img
+                      class="reviews__icon"
+                      src="image/star.svg"
+                      alt="star"
+                    />
+                    <img
+                      class="reviews__icon"
+                      src="image/star.svg"
+                      alt="star"
+                    />
+                    <img
+                      class="reviews__icon"
+                      src="image/star.svg"
+                      alt="star"
+                    />
+                    <img
+                      class="reviews__icon"
+                      src="image/star.svg"
+                      alt="star"
+                    />
                   </div>
                   <!-- /.reviews-slider__rating -->
                 </div>
@@ -341,11 +684,31 @@
                   <h3 class="reviews-slider__username">Alexey Dolmatov</h3>
                   <span class="reviews-slider__date">Stayed 17 Oct, 2021</span>
                   <div class="reviews-slider__rating">
-                    <img class="rating__icon" src="image/star.svg" alt="star" />
-                    <img class="rating__icon" src="image/star.svg" alt="star" />
-                    <img class="rating__icon" src="image/star.svg" alt="star" />
-                    <img class="rating__icon" src="image/star.svg" alt="star" />
-                    <img class="rating__icon" src="image/star.svg" alt="star" />
+                    <img
+                      class="reviews__icon"
+                      src="image/star.svg"
+                      alt="star"
+                    />
+                    <img
+                      class="reviews__icon"
+                      src="image/star.svg"
+                      alt="star"
+                    />
+                    <img
+                      class="reviews__icon"
+                      src="image/star.svg"
+                      alt="star"
+                    />
+                    <img
+                      class="reviews__icon"
+                      src="image/star.svg"
+                      alt="star"
+                    />
+                    <img
+                      class="reviews__icon"
+                      src="image/star.svg"
+                      alt="star"
+                    />
                   </div>
                   <!-- /.reviews-slider__rating -->
                 </div>
