fix: title in pacages subvariant 4

--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                 <span class="packages__lable--small">Flash Offer</span>
               </div>
               <div class="packages-subvariant-4">
-                <h2 class="packages__hotel-name--small">LUX* Belle Mare</h2>
+                <h2 class="packages__hotel-name--small">White Palace</h2>
                 <div class="packages__room--small">
                   <div class="packages__geolocation">
                     <img
@@ -439,7 +439,7 @@
                 <span class="packages__lable--small">Flash Offer</span>
               </div>
               <div class="packages-subvariant-4">
-                <h2 class="packages__hotel-name--small">LUX* Belle Mare</h2>
+                <h2 class="packages__hotel-name--small">Luxury Place</h2>
                 <div class="packages__room--small">
                   <div class="packages__geolocation">
                     <img
@@ -489,7 +489,7 @@
                 <span class="packages__lable--small">Flash Offer</span>
               </div>
               <div class="packages-subvariant-4">
-                <h2 class="packages__hotel-name--small">LUX* Belle Mare</h2>
+                <h2 class="packages__hotel-name--small">Hotel Five Star</h2>
                 <div class="packages__room--small">
                   <div class="packages__geolocation">
                     <img
